# CEmail

./: .gitignore  CHANGELOG.md  Cargo.toml  README-en.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  syntax_request.md
.github/workflows/: CICD.yml  build-release.yml  gnu.yml
src/: check.rs  cli.rs  get_email.rs  lib.rs  main.rs
