[package]
name = "cemail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.1", features = ["full"] }
check-if-email-exists = "0.8"
serde = { version="1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = { version="0.3.15", features = ["time", "local-time"] }
time = { version = "0.3.14", features = ["macros"] }
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0.65"
openssl = { version = "0.10", features = ["vendored"] }